--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-ji7.net待时守分
+
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+
+        <meta charset="utf-8">
+        <title>极趣网 - 专注网址导航和资源分享</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+
+        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+
+        <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+
+    </head>
+
+    <body>
+
+        <div class="container">
+            <div class="header row">
+                <div class="logo span4">
+                    <h1><a href="">Ji7.net</a> </h1>
+                </div>
+                <div class="call-us span8">
+                    <p>E-mail: <span><a href=mailto:ji7@Ji7.net>ji7@Ji7.net</a></span></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="coming-soon">
+            <div class="inner-bg">
+                <div class="container">
+                    <div class="row">
+                        <div class="span12">
+                            <h2>网站上线倒计时</h2>
+                            <p>我们非常努力在我们的网站的新版本。它会带来很多新特性。请继续关注!</p>
+                            <div class="timer">
+                                <div class="days-wrapper">
+                                    <span class="days"></span> <br>天
+                                </div>
+                                <div class="hours-wrapper">
+                                    <span class="hours"></span> <br>时
+                                </div>
+                                <div class="minutes-wrapper">
+                                    <span class="minutes"></span> <br>钟
+                                </div>
+                                <div class="seconds-wrapper">
+                                    <span class="seconds"></span> <br>秒
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="span12 subscribe">
+                    <h3>休闲一下</h3>
+                    <p><a href=mianfeivip/>免费解析</a></p>
+                    <div class="success-message"></div>
+                    <div class="error-message"></div>
+                </div>
+            </div>
+        </div>
+
+        <script src="assets/js/jquery-1.8.2.min.js"></script>
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="assets/js/jquery.backstretch.min.js"></script>
+        <script src="assets/js/jquery.countdown.js"></script>
+        <script src="assets/js/scripts.js"></script>
+
+    </body>
+
+</html>
+
