--- a/404.html
+++ b/404.html
@@ -20,9 +20,9 @@ h1{font-size:44px; color:#0188DE; padding:20px 0px 10px 0px;}
 h2{color:#0188DE; font-size:16px; padding:10px 0px 40px 0px;}
 
 #page{width:910px; padding:20px 20px 40px 20px; margin-top:80px;}
-.button{width:180px; height:28px; margin-left:0px; margin-top:10px; background:#009CFF; border-bottom:4px solid #0188DE; text-align:center;}
+.button{width:180px; height:28px; margin-left:0px; margin-top:10px; background:#000; border-bottom:4px solid #0188DE; text-align:center;}
 .button a{width:180px; height:28px; display:block; font-size:14px; color:#fff; }
-.button a:hover{ background:#5BBFFF;}
+.button a:hover{ background:#7668760;}
 </style>
 
 </head>
