--- a/404.html
+++ b/404.html
@@ -16,13 +16,13 @@ h1,h2,h3,h4 {
 	font-weight:normal; 
 	font-family: "微软雅黑", Arial, "Trebuchet MS", Helvetica, Verdana ; 
 }
-h1{font-size:44px; color:#0188DE; padding:20px 0px 10px 0px;}
-h2{color:#0188DE; font-size:16px; padding:10px 0px 40px 0px;}
+h1{font-size:44px; color:#000; padding:20px 0px 10px 0px;}
+h2{color:#018; font-size:16px; padding:10px 0px 40px 0px;}
 
 #page{width:910px; padding:20px 20px 40px 20px; margin-top:80px;}
 .button{width:180px; height:28px; margin-left:0px; margin-top:10px; background:#000; border-bottom:4px solid #0188DE; text-align:center;}
 .button a{width:180px; height:28px; display:block; font-size:14px; color:#fff; }
-.button a:hover{ background:#7668760;}
+.button a:hover{ background:#cfcfcf;}
 </style>
 
 </head>
