--- a/404.html
+++ b/404.html
@@ -3,7 +3,8 @@
 	<head>		
 		<meta charset="utf-8" />
 <title>极趣网很抱歉，此页面暂时找不到！</title>
-
+<meta http-equiv="pragma" content="no-cache">
+<meta http-equiv="Cache-Control" content="no-cache,must-revalidate">
 <style type="text/css">
 body {margin: 0px; padding:0px; font-family:"微软雅黑", Arial, "Trebuchet MS", Verdana, Georgia,Baskerville,Palatino,Times; font-size:16px;}
 div{margin-left:auto; margin-right:auto;}
