--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@ h1{font-size:44px; color:#000; padding:20px 0px 10px 0px;}
 h2{color:#018; font-size:16px; padding:10px 0px 40px 0px;}
 
 #page{width:910px; padding:20px 20px 40px 20px; margin-top:80px;}
-.button{width:180px; height:28px; margin-left:0px; margin-top:10px; background:#000; border-bottom:4px solid #0188DE; text-align:center;}
+.button{width:180px; height:28px; margin-left:0px; margin-top:10px; background:#000; border-bottom:4px solid #017; text-align:center;}
 .button a{width:180px; height:28px; display:block; font-size:14px; color:#fff; }
 .button a:hover{ background:#cfcfcf;}
 </style>
@@ -31,7 +31,7 @@ h2{color:#018; font-size:16px; padding:10px 0px 40px 0px;}
 
 
 <div id="page" style="border-style:dashed;border-color:#e4e4e4;line-height:30px;">
-	<h1><img src=/images/logo.png></h1>
+	<h1><img src=/images/logo1.png></h1>
 	<h1>抱歉，找不到此页面~</h1>
 	<h2>Sorry, the site now can not be accessed. </h2>
 	<font color="#666666">你请求访问的页面，暂时找不到，我们建议你返回首页官网进行浏览，谢谢！</font><br /><br />
