--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <script src="assets/js/jquery.backstretch.min.js"></script>
         <script src="assets/js/jquery.countdown.js"></script>
         <script src="assets/js/scripts.js"></script>
-
+<script type="text/javascript" src="https://s19.cnzz.com/z_stat.php?id=2884510&web_id=2884510"></script>
     </body>
 
 </html>
