--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <div class="span12 subscribe">
                     <h3>休闲一下</h3>
                     <p><a href=mianfeivip/>免费解析</a></p>
+                    <p><script type="text/javascript" src="https://s19.cnzz.com/z_stat.php?id=2884510&web_id=2884510"></script></p>
                     <div class="success-message"></div>
                     <div class="error-message"></div>
                 </div>
@@ -76,7 +77,7 @@
         <script src="assets/js/jquery.backstretch.min.js"></script>
         <script src="assets/js/jquery.countdown.js"></script>
         <script src="assets/js/scripts.js"></script>
-<script type="text/javascript" src="https://s19.cnzz.com/z_stat.php?id=2884510&web_id=2884510"></script>
+
     </body>
 
 </html>
