--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="span12 subscribe">
                     <h3>休闲一下</h3>
                     <p><a href=mianfeivip/>免费解析</a></p>
-                    <p><script type="text/javascript" src="https://s19.cnzz.com/z_stat.php?id=2884510&web_id=2884510"></script></p>
+                    <p style="display:none;"><script type="text/javascript" src="https://s19.cnzz.com/z_stat.php?id=2884510&web_id=2884510"></script></p>
                     <div class="success-message"></div>
                     <div class="error-message"></div>
                 </div>
