--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
         <meta charset="utf-8">
         <title>极趣网 - 专注网址导航和资源分享</title>
+		<meta http-equiv="pragma" content="no-cache">
+        <meta http-equiv="Cache-Control" content="no-cache,must-revalidate">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
