--- a/404.html
+++ b/404.html
@@ -25,11 +25,15 @@ h2{color:#018; font-size:16px; padding:10px 0px 40px 0px;}
 .button a{width:180px; height:28px; display:block; font-size:14px; color:#fff; }
 .button a:hover{ background:#cfcfcf;}
 </style>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-8131273884704162",
+          enable_page_level_ads: true
+     });
+</script>
 </head>
 <body>
-
-
 <div id="page" style="border-style:dashed;border-color:#e4e4e4;line-height:30px;">
 	<h1><img src=/images/logo.png></h1>
 	<h1>抱歉，找不到此页面~</h1>
@@ -39,8 +43,6 @@ h2{color:#018; font-size:16px; padding:10px 0px 40px 0px;}
 		<a href="/" title="进入官网">进入官网</a>
 	</div>
 </div>
-
-
-
+<p style="display:none;"><script type="text/javascript" src="https://s19.cnzz.com/z_stat.php?id=2884510&web_id=2884510"></script></p>
 </body>
 </html>
