--- a/mianfeivip/index.html
+++ b/mianfeivip/index.html
@@ -71,7 +71,7 @@ alert("抱歉，您所使用的浏览器无法完成此操作。\n\n加入收藏
 <div class="topbar">
 <div class="container">
 <div class="logo">
-<a href="http://ji7.net/mianfeivip" target="_self"><img src="img/logo.png">
+<a href="http://ji7.net/jx" target="_self"><img src="img/logo.png">
 </a>
 </div><div class="txt">免费VIP视频解析！</div>
 <script>new srcMarquee("ScrollMe",0,1,808,40,40,4200,4200,40)</script>
@@ -101,7 +101,7 @@ alert("抱歉，您所使用的浏览器无法完成此操作。\n\n加入收藏
 <option value="5">⑤号通用vip引擎系统【稳定通用】</option>
 <option value="6">⑥号vip引擎系统【腾讯视频接口】</option>
 <option value="7">⑦号vip引擎系统【爱奇艺超清接口1】</option>
-<option value="8">⑧号vip引擎系统【爱奇艺超清接口2】</option>
+<option value="8">⑧号vip引擎系统【稳定通用】</option>
 <option value="9">⑨号vip引擎系统【爱奇艺超清接口3】</option>
 <option value="10">芒果TV超清接口</option>
 <option value="11">芒果TV手机接口</option>
@@ -217,11 +217,11 @@ alert("抱歉，您所使用的浏览器无法完成此操作。\n\n加入收藏
 </script>
 <br>
 <br>
-<span>Copyright ©  <a href="http://ji7.net/mianfeivip">极趣解析</a> All Rights Reserved.</span></div></div>
+<span>Copyright ©  <a href="http://ji7.net/jx">极趣解析</a> All Rights Reserved.</span></div></div>
 </div>
 </div>
 <script>           
-eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('t($(A).1p()<1x){q b=$(\'1q\');q c=$(\'.1B-1F\');q d=$(\'.1L\');b.1S(\'1h\');c.1n();d.1o()};B a(b){q c=1t 1w(\'(^|&)\'+b+\'=([^&]*)(&|$)\',\'i\');q d=A.G.1D.1E(1).1I(c);t(d!=X){W 1N(d[2])};W X}(B(){q b={\'0\':"w://y.J.H/y/?p=",\'1\':"w://y.1s.U/1u/1v.u?p=",\'2\':\'w://T.s/x.u?p=\',\'3\':\'r://T.s/x.u?p=\',\'4\':\'w://x.1G.H/?p=\',\'5\':\'r://x.1H.s/?p=\',\'6\':\'r://L.V.s/C/K.u?p=\',\'7\':\'r://y.1R.s/?p=\',\'8\':\'w://x.17.s/?p=\',\'9\':\'w://18.19.1a/1b.u?p=\',\'10\':\'r://x.1c.s/C.u?p=\',\'11\':\'r://1d.1e.1f/1g.u?p=\',\'12\':\'r://L.V.s/C/K.u?p=\',\'13\':\'r://M.1i.s/C.u?p=\',\'14\':\'r://1j.s/1k/1l.u?p=\',};q c=a("1m");q d=a("p");t(!c){c=""};t(!d){d=""};c=c.N();d=d.N();t(c==\'\'){c="w://y.J.H/y/?p="};t(d==\'\'){d="r://v.O.s/P/1r==.Q"};q e=c+d;$("#R").z("S",e);$("#E-1y-1z").1A(B(h){h.1C();q j=$("#F-D").I();q k=b[j];q l=$(\'#E-p\').I();q m=/Y/i;t(j==8){t(m.Z(l)){q o=l.1K(":");l=o[3]}};q n=k+l;$("#R").z("S",n)});$(\'#F-D\').1M(B(){q h=$("#F-D").I();q j=$(\'#E-p\');t(h==8){j.z(\'15\',\'输入磁力链接地址(Y...)或者1O位码...\')}1P{j.z(\'15\',\'输入M视频播放地址，如：r://v.O.s/P/1Q==.Q\')}});q f=A.G.16;q g=/./i;t(!g.Z(f)){A.G.16=\'r://1T.U/1J/\'}})();',62,118,'|||||||||||||||||||||||||url|var|http|com|if|php||https|api|jx|attr|window|function|index|area|play|select|location|top|val|km58|qqvod|www|vip|trim|youku|v_show|html|play_iframe|src|beaacc|net|82190555|return|null|magnet|test||||||placeholder|href|rzhyi|jiexi|071811|cc|jx2|xfsub|65yw|2m|vc|chaojikan|300px|jlsprh|2gty|apiurl|yun|othernice|show|hide|width|iframe|id_XMTI4OTM2OTEwOA|hezeshi|new|ce|jlexi|RegExp|768|video|btn|click|warn|preventDefault|search|substr|info|100bx|smq1|match|mianfeivip|split|support|change|unescape|40|else|id_XMTU1OTAwMDU2MA|kdy52|height|ji7'.split('|'),0,{}))</script>
+eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('u($(B).1R()<1Q){q b=$(\'1P\');q c=$(\'.1L-1J\');q d=$(\'.1H\');b.1G(\'1F\');c.1E();d.1D()};A a(b){q c=1C 1B(\'(^|&)\'+b+\'=([^&]*)(&|$)\',\'i\');q d=B.H.1A.1z(1).1y(c);u(d!=15){16 1w(d[2])};16 15}(A(){q b={\'0\':"w://y.1s.L/y/?p=",\'1\':"w://y.1r.N/17/1q.t?p=",\'2\':\'w://P.r/x.t?p=\',\'3\':\'s://P.r/x.t?p=\',\'4\':\'w://x.1o.L/?p=\',\'5\':\'s://x.1n.r/?p=\',\'6\':\'s://z.W.r/C/Y.t?p=\',\'7\':\'s://y.18.r/?p=\',\'8\':\'w://z.Q.r/?p=\',\'9\':\'w://19.1a.1b/1c.t?p=\',\'10\':\'s://x.1d.r/C.t?p=\',\'11\':\'s://1e.1f.1g/1h.t?p=\',\'12\':\'s://z.W.r/C/Y.t?p=\',\'13\':\'s://Z.1i.r/C.t?p=\',\'14\':\'s://1j.r/1k/1l.t?p=\',};q c=a("1m");q d=a("p");u(!c){c=""};u(!d){d=""};c=c.V();d=d.V();u(c==\'\'){c="w://z.Q.r/?p="};u(d==\'\'){d="s://v.U.r/T/1p==.S"};q e=c+d;$("#O").D("K",e);$("#E-1t-1u").1v(A(h){h.1x();q j=$("#F-G").I();q k=b[j];q l=$(\'#E-p\').I();q m=/X/i;u(j==8){u(m.R(l)){q o=l.1I(":");l=o[3]}};q n=k+l;$("#O").D("K",n)});$(\'#F-G\').1K(A(){q h=$("#F-G").I();q j=$(\'#E-p\');u(h==8){j.D(\'M\',\'输入磁力链接地址(X...)或者1M位码...\')}1N{j.D(\'M\',\'输入Z视频播放地址，如：s://v.U.r/T/1O==.S\')}});q f=B.H.J;q g=/./i;u(!g.R(f)){B.H.J=\'s://1S.N/y/\'}})();',62,117,'|||||||||||||||||||||||||url|var|com|http|php|if||https|api|jx|www|function|window|index|attr|play|select|area|location|val|href|src|top|placeholder|net|play_iframe|beaacc|ckmov|test|html|v_show|youku|trim|82190555|magnet|qqvod|vip||||||null|return|ce|kdy52|jiexi|071811|cc|jx2|xfsub|65yw|2m|vc|chaojikan|jlsprh|2gty|apiurl|yun|othernice|smq1|100bx|id_XMTI4OTM2OTEwOA|jlexi|hezeshi|km58|video|btn|click|unescape|preventDefault|match|substr|search|RegExp|new|hide|show|300px|height|support|split|info|change|warn|40|else|id_XMTU1OTAwMDU2MA|iframe|768|width|ji7'.split('|'),0,{}))</script>
 <p style="display:none;"><script type="text/javascript" src="https://s19.cnzz.com/z_stat.php?id=2884510&web_id=2884510"></script></p>
 </body>
 </html>
