--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <head>
 
         <meta charset="utf-8">
-        <title>极趣网 - 专注网址导航和资源分享</title>
+        <title>极趣网 - 主要专注免费创业项目资源和实用网址导航分享</title>
+        <meta name="keywords" content="创业好项目,加盟开店,小投资赚钱项目,小成本投资,格子创业网,网址导航,实用工具" />
+        <meta name="description" content="极趣网 - 提供免费靠谱赚钱低成本创业好项目资讯,提供小投资赚钱项目,热门暴利和一些冷门创业好项目,大多项目适合大学生创新创业,农村创业,打工创业,女性创业,也适合有一定经济实力的加盟开店项目，同时本站还提供网址导航大全和实用工具分享。" />
 		<meta http-equiv="pragma" content="no-cache">
         <meta http-equiv="Cache-Control" content="no-cache,must-revalidate">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
